--- a/fritter/test/qr_camera/pubspec.yaml
+++ b/fritter/test/qr_camera/pubspec.yaml
@@ -14,12 +14,14 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   permission_handler: ^5.0.0+hotfix.3
+  qr_code_scanner: 0.0.12
+  youtube_player_flutter: ^6.1.0+7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
