--- a/fritter/test/qr_camera/ios/Runner/Info.plist
+++ b/fritter/test/qr_camera/ios/Runner/Info.plist
@@ -28,6 +28,8 @@
 	<string>Main</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Kameraberechtigungen</string>
+	<key>io.flutter.embedded_views_preview</key>
+    <true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
