--- a/fritter/test/qr_camera/pubspec.yaml
+++ b/fritter/test/qr_camera/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   permission_handler: ^5.0.0+hotfix.3
   qr_code_scanner: 0.0.12
   youtube_player_flutter: ^6.1.0+7
+  youtube_player: ^3.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
