--- a/fritter/test/qr_camera/pubspec.yaml
+++ b/fritter/test/qr_camera/pubspec.yaml
@@ -19,7 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  permission_handler: 5.0.0+hotfix.3
+  # permission_handler: 5.0.0+hotfix.3
   qr_code_scanner: 0.0.12
   youtube_player_flutter: 6.1.0+7
 
