--- a/fritter/test/qr_camera/pubspec.yaml
+++ b/fritter/test/qr_camera/pubspec.yaml
@@ -19,7 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  # permission_handler: 5.0.0+hotfix.3
+  permission_handler: 5.0.0+hotfix.3
   qr_code_scanner: 0.0.12
   youtube_player_flutter: 6.1.0+7
 
@@ -43,8 +43,6 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - icons/rickroll.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
