--- a/fritter/test/qr_camera/android/app/build.gradle
+++ b/fritter/test/qr_camera/android/app/build.gradle
@@ -38,7 +38,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.qr-android.tgm"
+        applicationId "com.qr_android.tgm"
         minSdkVersion 28
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
